Bug 463383 - Fonts appear garbled and unreadable in Kasts when font anti-aliasing is disabled
Summary: Fonts appear garbled and unreadable in Kasts when font anti-aliasing is disabled
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-23 09:29 UTC by readycommunication4
Modified: 2023-01-24 09:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot of Kasts with garbled fonts. (15.19 KB, image/png)
2022-12-23 09:29 UTC, readycommunication4
Details

Note You need to log in before you can comment on or make changes to this bug.
Description readycommunication4 2022-12-23 09:29:53 UTC
Created attachment 154777 [details]
A screenshot of Kasts with garbled fonts.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
The fonts in Kasts appear garbled and unreadable when font anti-aliasing is disabled in Plasma's settings. This does not happen with other applications that I have used, nor do fonts in Kasts look garbled when font anti-aliasing is enabled.

STEPS TO REPRODUCE
1. Disable font anti-aliasing by going to System Settings > Appearance > Fonts and unchecking the "Enable" checkbox for Anti-Aliasing.
2. Open Kasts.
3. User interface fonts in Kasts appear garbled and unreadable.

OBSERVED RESULT
The fonts in Kasts appear garbled and unreadable when font anti-aliasing is disabled.

EXPECTED RESULT
The fonts in Kasts to not appear garbled and unreadable.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux/KDE Plasma 5.26.4
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
I've added a screenshot demonstrating the bug.
Comment 1 bart 2023-01-15 09:02:28 UTC
This seems to be caused by a workaround that was introduced for another issue, namely the setting of env variable `QT_ENABLE_GLYPH_CACHE_WORKAROUND`.  This variable is needed to ensure that the UI doesn't completely freeze up on the original pinephone.
This is quite a dilemma. I don't want to make the app unusable on the pinephone, but also want to solve this issue. For the time being, I'll leave this bug open as a reminder to find an alternative solution to the workaround.
Comment 2 bart 2023-01-24 09:17:48 UTC
Git commit 9963132d60030ad1bc98f657b263fe5c414ba632 by Bart De Vries.
Committed on 24/01/2023 at 09:16.
Pushed by bdevries into branch 'master'.

Only set QT_ENABLE_GLYPH_CACHE_WORKAROUND on arm

M  +2    -2    src/main.cpp

https://invent.kde.org/plasma-mobile/kasts/commit/9963132d60030ad1bc98f657b263fe5c414ba632
Comment 3 bart 2023-01-24 09:18:59 UTC
It should now be solved on all architectures except arm and arm64, for which this env variable is necessary to not have major UI problems.