Only set QT_ENABLE_GLYPH_CACHE_WORKAROUND on arm

BUG: 463383